...
    getRandomCumputerMonster(value);
  };

  return (
    <>
      <ListTitle>
        {monsters.length > 0 ? 'Select your monster' : 'No monsters available'}
      </ListTitle>

      <MonstersSection
        horizontal
        testID="monsters-list-section"
        contentContainerStyle={containerScrollViewStyle}>
...
